send mail when post is created

--- a/heroku-example/views/emails/_styles.pug
+++ b/heroku-example/views/emails/_styles.pug
@@ -323,3 +323,17 @@ style.
   border-color: #34495e !important; 
   } 
   }
+  .post-card {
+    display: flex;
+    flex-direction: column;
+
+    width: 200px;
+    border: 1px solid black;
+  }
+  .post-card__title {
+    color: blue;
+    font-style: italic;
+  }
+  .post-card__content {
+    font-size: 14px;
+  }
